# TheThingStore

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_LICENSE_AGREEMENT.MD  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cla.yml  python-app.yml
docs/: 01_thethingstore.md  02_usethingstore.md  03_thingstoredatastructures.md  04_processdesign.md  05_butwhy.md  06_planning_and_roadmapping.md
docs/data_structures/: 00_things.md  01_atomicity.md  02a_components.md  02b_components_metadata.md  02c_components_dataset.md  02d_components_parameters.md  02e_components_function.md  02f_components_metrics.md  02g_components_embedding.md  02h_components_artifacts.md  03_graphs.md  04_pointers.md  05_thingstore.md
notebooks/: EmbeddedThing.md  FunctionalThing.md  README.md  TheLanguageOfThing_1_3.md  TheLanguageOfThings_2_3.ipynb  stepfunctions.py  test_function.py
notebooks/localthingstore/: README.md
src/thethingstore/: __init__.py  _types.py  file_id.py  thing_components.py  thing_graph.py  thing_node.py  thing_pointer.py  thing_store_base.py  thing_store_elements.py  thing_store_log.py  thing_store_mlflow.py  thing_store_pa_fs.py  types.py
src/thethingstore/api/: __init__.py  _fs.py  data_hash.py  error.py  load.py  save.py
tests/: __init__.py  conftest.py  test_thing_node.py
tests/test_data/: metadata.json  sample.parquet  sample.shp  workflow.py
tests/test_data/simple/: three.parquet
tests/test_thing-store/: __init__.py  test_file_id.py  test_thing_pointer.py  test_thing_store_base.py  test_thing_store_elements.py  test_thing_store_instance.py  test_thing_store_mlflow.py  test_thing_store_pa_fs.py  test_types.py
tests/test_thing-store/test_api/: test__fs.py  test_data_hash.py  test_load.py  test_save.py  test_torch.py
