[metadata]
name = thethingstore
version = file: VERSION
author = Timothy Luna, James Monk
author_email=timothy.luna.xj4s@statefarm.com, james.monk.vadevd@statefarm.com
description = An interface to a managed set of metadata and data
copyright = 2022, State Farm
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = Programming Language :: Python :: 3
[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9
install_requires =
    # Currently used in data hash.
    boto3>=1.20.0,<2
    pandas>=2,<=3
    pyarrow >= 10.0.1
    pydantic>=2.4.2
    tabulate>=0.9.0

[options.packages.find]
where = src

[options.extras_require]
models =
    scikit-learn==1.4.2
    joblib==1.2.0
shapes =
    geopandas == 0.12.1
    fiona>=1,<1.10
dev =
    # Packaging
    tox>=4.0.0
    wheel==0.38.4
    # Pytest
    pytest==7.2.1
    pytest-cov==4.0.0
    pytest-html==3.2.0
    coverage==7.0.5
    moto[server]==4.1.0
    # Flake
    flake8==6.0.0
    flake8-html==0.4.3
    # Mypy / Static Typing
    mypy==1.3.0
    lxml==4.9.2
    # Bandit / Security
    bandit==1.7.4
    # Black / Opinionated Formatting
    black==22.12.0
    # Sphinx / Documentation
    sphinx==7.0.1
    autodoc==0.5.0
    nbsphinx==0.8.12
    myst-parser==2.0.0

[options.data_files]
data = VERSION, README.md

[mypy]
files = src/**/*.py
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
